# lab

./: Cargo.toml  configuration.nix  ergo.yaml  flake.nix  hardware-configuration.nix  hopper.path  install.sh  justfile  result
.github/workflows/: ci.yaml
crates/hopper/src/: error.rs  main.rs
etc/: claude.json  ergo.yaml  forgejo.service  hopper.path  hopper.service  lab.md  nftables.conf  opendmarc.conf  tulip.farm.zone
src/: error.rs  main.rs  message.rs  subcommand.rs
src/subcommand/: chat.rs  gamemaster.rs  log.rs  mail.rs  mood.rs  note.rs  notebook.rs  notify.rs  reset.rs  resume.rs  sessions.rs  task.rs
tasks/: audit.md  gamemaster.md
tests/: chat.rs  expected.rs  lib.rs  log.rs  mail.rs  test.rs
www/: index.html
