[package]
name = "lab"
version = "0.0.0"
edition = "2024"
autotests = false

[dependencies]
clap = { version = "4", features = ["derive"] }
lettre = { version = "0.11.19", default-features = false, features = ["sendmail-transport"] }
log = "0.4"
mail-builder = "0.4.4"
mailparse = "0.15"
pulldown-cmark = "0.13.0"
redb = "3.1.0"
snafu = "0.8"
systemd-journal-logger = "2"
uuid = { version = "1.21.0", features = ["v7"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
regex = "1.12.3"
tempfile = "3.25.0"

[[test]]
name = "integration"
path = "tests/lib.rs"
